--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -15,7 +15,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('tree.jpg');
+  background-image: url('../tree.jpg');
   background-size: cover;
 }
 
