--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -10,13 +10,14 @@
 }
 
 body{
-  width: 99vw;
-  height: 99vh;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   background-image: url('../tree.jpg');
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .container {
@@ -59,11 +60,26 @@ body{
 .clearBtn{
   color: white;
   position: absolute;
-  bottom: 0px;
-  left: 0px;
   border: none;
   background-color: transparent;
   font-size: 32px;
+  margin-left: 10px;
+}
+
+.clearBtn:nth-of-type(1){
+  bottom: 0px;
+  left: 0px;
+}
+
+.clearBtn:nth-of-type(2){
+  bottom: 0px;
+  left: 0px;
+  margin-left: 50px;
+}
+
+.clearBtn:nth-of-type(3){
+  right: 20px;
+  top: 0px;
 }
 
 .clearBtn:hover{
@@ -96,4 +112,44 @@ body{
   100%{
     margin-bottom: 0px;
   }
+}
+
+.containerTwo{
+  padding: 10px;
+  margin-left: 20px;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  width: 500px;
+  height: 700px;
+  backdrop-filter: blur(10px);
+  background-color: transparent;
+  overflow: hidden;
+  animation: wjazd 2s;
+  transition: all 1s ease-in-out;
+  border: 2px solid white;
+  border-radius: 10px;
+  text-wrap:nowrap;
+}
+
+.containerTwo h1{
+  margin-bottom: 60px;
+  font-size: 40px;
+  color: white;
+}
+
+.list{
+  list-style: none;
+  color: white;
+  font-size: 40px;
+  height: 60%;
+  width: 90%;
+  text-align: center;
+}
+
+.containerTwo .clearBtn{
+  left: 0px;
+  bottom: 0px;
 }
